angular users controlers

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,2 +1,13 @@
 body
-  background-color: 'green'
+  
+.portal
+  position: absolute
+  line-height: 1.5em
+  left: 50%
+  top: 25%
+  width: 960px
+  color: #444444
+  text-align: center
+  margin-left: -480px
+  h3
+    font-size: 5em
