--- a/app/sass/inbox.sass
+++ b/app/sass/inbox.sass
@@ -241,6 +241,23 @@ header
             height: 32px
   img
     height: 4em
+    
+.bannerAlert
+  width: 240px
+  position: relative
+  transition: all 0.1s
+  -webkit-transition: all 0.1s
+  padding: 10px 10px
+  display: block
+  margin: 15px auto
+  border-radius: 10px
+  background-color: #F2CF66
+  border-bottom: 5px solid #D1B358
+  text-shadow: 0px -2px #D1B358
+  &:active
+    transform: translate(0px,5px)
+    -webskit-transform: translate(0px, 5px)
+    border-bottom: 1px solid
 
 .functions
   display: flex
