--- a/app/sass/inbox.sass
+++ b/app/sass/inbox.sass
@@ -6,9 +6,7 @@ $primary: #f4f2ff
 body
   margin: 0px
   // overflow: hidden;
-
 // Everything about header
-
 header
   width: 100%
   display: flex
@@ -48,7 +46,7 @@ header
     width: 80px
     z-index: 10
     ul
-      display: none
+      //display: none
       width: 300%
       background-color: $primary
       height: 88.25vh
@@ -132,6 +130,7 @@ header
             &::-webkit-scrollbar-thumb
               background: #5142f4
     #writeMail
+      z-index: 222
       #tools
         &:hover
           background-color: #9298ff
@@ -152,8 +151,8 @@ header
       &:hover
         opacity: 1.0
     aside
-      display: flex
-      display: none
+      //display: flex
+      //display: none
       position: absolute
       right: 0
       top: 4.1em
@@ -240,6 +239,23 @@ header
             height: 32px
   img
     height: 4em
+    
+.bannerAlert
+  width: 240px
+  position: relative
+  transition: all 0.1s
+  -webkit-transition: all 0.1s
+  padding: 10px 10px
+  display: block
+  margin: 15px auto
+  border-radius: 10px
+  background-color: #F2CF66
+  border-bottom: 5px solid #D1B358
+  text-shadow: 0px -2px #D1B358
+  &:active
+    transform: translate(0px,5px)
+    -webskit-transform: translate(0px, 5px)
+    border-bottom: 1px solid
 
 .functions
   display: flex
@@ -295,8 +311,6 @@ header
     align-items: center
     li
       height: 40px
-      button
-        background-color
       img
         width: 40px
 
