--- a/app/sass/inbox.sass
+++ b/app/sass/inbox.sass
@@ -1,4 +1,5 @@
 $primary: #f4f2ff
+$mobile: "screen and (max-width: 850px)"
 
 *
   font-family: Verdana, sans-serif
@@ -23,6 +24,12 @@ header
     justify-content: space-between
     margin: 0px
     padding: 0px
+    & >li:nth-child(2)
+      position: absolute
+      left: 0
+      @media #{$mobile}
+        display: block
+        position: relative
     & > li img
       cursor: pointer
     .compose
@@ -39,6 +46,9 @@ header
       // }
     #burger
       background-color: white
+      display: none
+      @media #{$mobile}
+        display: block
     #burger:active
       background-color: $primary
   // side-menu
@@ -46,37 +56,56 @@ header
     margin: 0
     position: relative
     width: 80px
+    display: block
     z-index: 10
+    margin-top: 4.1em
+    @media #{$mobile}
+      z-index: 0
+      margin-top: 0px
+      height: calc((85vh) + 4em)
+      width: 80%
     ul
-      display: none
-      width: 300%
-      background-color: $primary
+      display: block
+      width: 150%
+      background-color: white
       height: 88.25vh
       min-height: 500px
       list-style-type: none
       padding: 0.1em
       box-shadow: 0px 1px 15px #aaaffd
+      @media #{$mobile}
+        height: 85vh
+        min-height: 85vh
+        display: none
+        width: 300%
       li
         margin: 0px
         text-align: center
         border-bottom: 2px solid #aaaffd
-        // background-color: #ccd4ff;
+        cursor: pointer
         padding-bottom: 10%
         padding-top: 10%
+        @media #{$mobile}
+          padding-bottom: 5%
+          padding-top: 5%
         &:hover
           // background-color: #999ffd;
           box-shadow: 1px 0px 5px gray
       #logout
         position: absolute
         bottom: 0px
-        padding-bottom: 30%
-        padding-top: 30%
-        width: 300%
+        padding-bottom: 15%
+        padding-top: 15%
+        width: 150%
         background-color: #ce3939
         border: 0px
         color: white
         opacity: 0.9
         box-shadow: 2px 0px 3px gray
+        @media #{$mobile}
+          width: 300%
+          padding-bottom: 15%
+          padding-top: 15%
         &:hover
           opacity: 1.0
   article
@@ -133,6 +162,8 @@ header
               background: #5142f4
     #writeMail
       #tools
+        @media #{$mobile}
+          width: 80%
         &:hover
           background-color: #9298ff
       .toolsOpen
@@ -165,6 +196,9 @@ header
       background-color: $primary
       height: 84vh
       min-height: 500px
+      @media #{$mobile}
+        width: 90%
+        z-index: 4444
       #message
         position: absolute
         left: 0
@@ -194,6 +228,9 @@ header
         top: 0
         width: 64px
         z-index: 10000
+        @media #{$mobile}
+          width: 3.2em
+          margin: 0px
         img
           position: relative
           width: 100%
@@ -201,29 +238,35 @@ header
           top: 0
         div
           display: none
-          height: 200%
           background-color: #cecbe3
           width: 100%
           box-shadow: 2px 2px 5px #938fa7
+          @media #{$mobile}
+            height: 70vh
+            width: 80%
           ul
             padding: 0px
             list-style-type: none
             display: flex
             flex-direction: row
             flex-wrap: wrap
-            justify-content: center
+            justify-content: flex-start
             li
               margin: 0px
               padding: 0px
               img
                 width: 48px
+                @media #{$mobile}
+                  margin: 0 auto
+                  height: 2.4em
+                  width: 80%
       #options
         position: absolute
         z-index: 30
         width: 92.5%
         height: 40px
         bottom: 0
-        background-color: #d2d2d2
+        background-color: #f4f2ff
         border: 1px solid #929292
         box-shadow: 0px -1px 5px #929292
         ul
@@ -254,6 +297,10 @@ header
   margin-top: 2%
   border: 1px solid #e7e4fb
   border-bottom: 0px
+  @media #{$mobile}
+    width: 100%
+    margin-top: 0
+    border: 0px
   span
     display: flex
     align-items: center
@@ -308,6 +355,9 @@ main
   max-height: 75vh
   margin: 0 auto
   flex-direction: column
+  @media #{$mobile}
+    max-height: 80vh
+    width: 100%
   &::-webkit-scrollbar
     width: 6px
     height: 6px
@@ -359,8 +409,11 @@ main
     background-color: white
     border: 1px solid $primary
     font-size: 1em
-    color: #6364a1
+    color: #606060
     cursor: pointer
+    @media #{$mobile}
+      padding: 0px
+      min-height: 75px
     .full-message
       display: none
     &:hover
@@ -395,6 +448,8 @@ main
       top: 0
       width: 5%
       height: 50px
+      @media #{$mobile}
+        height: 75px
       input
         margin: 0 auto
         display: none
