--- a/app/templates/box.html
+++ b/app/templates/box.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="view.css">
+    <link rel="stylesheet" type="text/css" href="CSS/box.css">
   </head>
   <body>
     <header>
@@ -28,7 +28,7 @@
       <div class='body-cont'>
         <article class='body'>
           <h1>Title</h1>
-          <section class='otherBody'><img src="../logo/Space_Needle002.jpg"><img src="../logo/flybox-4.0.4-64x64.svg"><img src="../logo/flybox-4.0.4-64x64.svg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"></section>
+          <section class='otherBody'><img src="../logo/Space_Needle002.jpg"><!-- <img src="../logo/flybox-4.0.4-64x64.svg"><img src="../logo/flybox-4.0.4-64x64.svg"> --><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"><!-- <img src="../logo/Space_Needle002.jpg"><img src="../logo/Space_Needle002.jpg"> --><!-- <img src="../logo/Space_Needle002.jpg"> --><!-- <img src="../logo/Space_Needle002.jpg"> --></section>
           <section class='textBody'><p id='aaa'>Lorem
            ipsum dolor sit amet, consectetur a Lorem ipsum dolor sit amlorem  Lorem ipsum dolor sit amloremlorem  Lorem ipsum dolor sit amet, consectetur.L consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           c in reprehenderit in voluptate vel Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
