inbox sidebar style

--- a/app/sass/inbox.sass
+++ b/app/sass/inbox.sass
@@ -24,6 +24,8 @@ header
     justify-content: space-between
     margin: 0px
     padding: 0px
+    & > li:nth-child(1)
+      width: 9%
     & >li:nth-child(2)
       position: absolute
       left: 0
@@ -55,7 +57,7 @@ header
   nav
     margin: 0
     position: relative
-    width: 80px
+    width: 100%
     display: block
     z-index: 10
     margin-top: 4.1em
