cleaned and functional angular box get route

--- a/app/sass/box.sass
+++ b/app/sass/box.sass
@@ -53,7 +53,9 @@ header
           opacity: 1.0
         img
           padding: 0px
-          width: 4em
+          width: 3.5em
+          height: 3.5em
+          margin: 0 auto
           border-radius: 100%
         &:nth-child(1)
           background-color: rgba(random(255), random(255), random(255), random(10) / 10)
