--- a/app/sass/box.sass
+++ b/app/sass/box.sass
@@ -272,7 +272,7 @@ main
       width: 100%
       display: flex
       justify-content: space-between
-      flex-direction: column
+      flex-direction: column-reverse
       overflow: auto
       // height: 65vh
       section
