--- a/app/templates/box.html
+++ b/app/templates/box.html
@@ -21,7 +21,7 @@
         <section class='people'>
           <ul>
             <li data-ng-model="original"><img title="{{original.author}}" src="../logo/flybox-4.0.4-64x64.svg"></li>
-            <li data-ng-repeat="recipient in recipients"><img title="{{recipient.email}}" src="../logo/flybox-4.0.4-64x64.svg"></li>
+            <li data-ng-repeat="recipient in recipients"><img title="{{recipient.email}}"></li>
           </ul>
         </section>
       </section>
