--- a/app/sass/box.sass
+++ b/app/sass/box.sass
@@ -80,6 +80,7 @@ header
         // text-align: center
         // line-height: 3em
         p
+          text-transform: uppercase
           font-size: 3.5em
           color: white
         &:hover
@@ -379,18 +380,22 @@ main
             width: 4em
             margin: 0px
             margin: 0 auto
-            min-height: 4em
+            height: 4em
             padding: 0px
             border-radius: 100%
             background-color: #7f86e5
+            list-style-type: none
             li
               text-align: center
-              color: #fff
+              text-transform: uppercase
               padding: 0
               margin: 0px
               width: 100%
-              font-weight: bold
-              font-size: 3.5em
+              p
+                padding: 0px
+                margin: 0px
+                font-size: 3.5em
+                color: #fff
           p
             color: #949494
           .email
