--- a/app/sass/box.sass
+++ b/app/sass/box.sass
@@ -69,7 +69,7 @@ header
         // justify-content: center
         // align-items: flex-end
         margin: 0px 3px 0px 3px
-        border-radius: 100%
+        //border-radius: 100%
         opacity: 0.8
         // min-width: 3em
         // min-height: 2em
@@ -89,28 +89,6 @@ header
           padding: 0px
           width: 4em
           border-radius: 100%
-        &:nth-child(1)
-          background-color: rgba(random(80), random(100), 255 - random(100), 1)
-        &:nth-child(2)
-          background-color: rgba(random(80), random(100), 255 - random(80), 1)
-        &:nth-child(3)
-          background-color: rgba(random(80), random(100), 255 - random(90), 1)
-        &:nth-child(4)
-          background-color: rgba(random(80), random(100), 255 - random(100), 1)
-        &:nth-child(5)
-          background-color: rgba(random(10), random(50), random(255), random(10) / 10)
-        &:nth-child(6)
-          background-color: rgba(random(255), random(255), random(255), random(10) / 10)
-        &:nth-child(7)
-          background-color: rgba(random(255), random(255), random(255), random(10) / 10)
-        &:nth-child(8)
-          background-color: rgba(random(255), random(255), random(255), random(10) / 10)
-        &:nth-child(9)
-          background-color: rgba(random(255), random(255), random(255), random(10) / 10)
-        &:nth-child(10)
-          background-color: rgba(random(255), random(255), random(255), random(10) / 10)
-        &:nth-child(11)
-          background-color: rgba(random(255), random(255), random(255), random(10) / 10)
         p
           width: 100%
           height: 100%
@@ -382,8 +360,8 @@ main
             margin: 0 auto
             height: 4em
             padding: 0px
-            border-radius: 100%
-            background-color: #7f86e5
+            //border-radius: 100%
+            //background-color: #7f86e5
             list-style-type: none
             li
               text-align: center
