--- a/app/templates/box.html
+++ b/app/templates/box.html
@@ -18,7 +18,7 @@
       </section>
 
       <section id='images'>
-        <figure><img src="../logo/flybox-4.0.4-64x64.svg"></figure>
+        <figure><img src='../logo/flybox.png' width="150px" height="53px"></figure>
         <section class='people'>
           <ul>
             <li data-ng-model="original"><p title="{{original.author}}">{{original.author[0]}}</p></li>
@@ -85,4 +85,3 @@
     <script type="text/javascript" src='aa.js'></script>
   </body>
 </html>
-
