--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -15,7 +15,7 @@
         </nav>
       </li>
       <li id='logo'>
-        <img src='../logo/fly-box-logo.svg'>
+        <img src='../logo/flybox.png' width="150px" height="53px">
       </li>
       <li>
         <article>
