--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
 <div data-ng-controller="UsersCtrl">
   <article>
     <main>
-      <img id='logo' src="../logo/flybox-4.0.4-64x64.svg">
+      <img id='logo' src="../logo/flybox.png" width="250px" height="87px">
       <section id='buttons'data-ng-hide='signingUp || signingIn'>
         <button id='signin' data-ng-click='signingIn = true'>Log In</button>
         <p>Or <a id='signup' href data-ng-click='signingUp = true'>Sign Up</a></p>
