--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -15,7 +15,7 @@
         </nav>
       </li>
       <li id='logo'>
-        <img src='../logo/fly-box-logo.svg'>
+        <img src='../logo/flybox.png'>
       </li>
       <li>
         <article>
@@ -75,13 +75,13 @@
     </span>
     <ul>
       <li>
-        Sender
+        <p>Sender</p>
       </li>
       <li>
-        Subject
+        <p>Subject</p>
       </li>
       <li>
-        Date
+        <p>Date</p>
       </li>
     </ul>
   </aside>
