--- a/app/sass/box.sass
+++ b/app/sass/box.sass
@@ -50,6 +50,22 @@ header
     @media #{$media}
       width: 80%
       margin-top: 0px
+      overflow-y: auto
+      &::-webkit-scrollbar
+        width: 6px
+        height: 6px
+      &::-webkit-scrollbar-track
+        background: #bababa
+      &::-webkit-scrollbar-thumb
+        background: #888888
+      &:hover
+        &::-webkit-scrollbar
+          width: 6px
+          height: 6px
+        &::-webkit-scrollbar-track
+          background: #bababa
+        &::-webkit-scrollbar-thumb
+          background: #888888
     ul
       padding: 0px
       list-style-type: none
@@ -61,7 +77,6 @@ header
       text-align: center
       @media #{$media}
         justify-content: flex-end
-        overflow-y: auto
       li
         height: 4em
         width: 4em
@@ -69,6 +84,7 @@ header
         display: flex
         margin: 0px 3px 0px 3px
         opacity: 0.8
+        cursor: default
         p
           text-transform: uppercase
           font-size: 3.5em
@@ -173,7 +189,7 @@ main
       flex-direction: row
       position: relative
       justify-content: space-around
-      background-color: rgba(234,67,67, 1.0)
+      background-color: #bb0c0c
       height: 4em
       margin: 0 auto
       margin-top: 1em
@@ -210,7 +226,7 @@ main
       .favourite > input:checked + label:hover
         color: gold
       .mute
-        width: 4em
+        width: 3em
       .mute:not(:checked)
         border: 0px
         & > input
@@ -220,18 +236,22 @@ main
         & > label
           margin: 0 auto
           float: right
-          width: 4em
-          height: 4em
+          width: 3em
+          height: 3em
           overflow: hidden
           white-space: nowrap
           cursor: pointer
           background: url(../logo/following.svg) no-repeat
+          background-size: 3em 3em
         & > label:hover
           background: url(../logo/mute.svg) no-repeat
-          background-position: 50%
+          background-size: 3em 3em
       .mute > input:checked ~ label
-          background: url(../logo/following.svg) no-repeat
-      // .mute > input:checked + label:hover
+        background: url(../logo/mute.svg) no-repeat
+        background-size: 3em 3em
+      .mute > input:checked + label:hover
+        background: url(../logo/following.svg) no-repeat
+        background-size: 3em 3em
 
       .search
         width: 2em
