--- a/app/templates/inbox.html
+++ b/app/templates/inbox.html
@@ -15,7 +15,7 @@
         </nav>
       </li>
       <li id='logo'>
-        <img src='../logo/fly-box-logo.svg'>
+        <img src='../logo/flybox.png'>
       </li>
       <li>
         <article>
@@ -30,13 +30,13 @@
               <img src="../logo/compose-2.svg" id='tools'>
               <div id='toolMenu'>
                 <ul>
-                  <li><img src="../logo/compose-2.svg"></li>
-                  <li><img src="../logo/compose-2.svg"></li>
-                  <li><img src="../logo/compose-2.svg"></li>
-                  <li><img src="../logo/compose-2.svg"></li>
-                  <li><img src="../logo/compose-2.svg"></li>
-                  <li><img src="../logo/compose-2.svg"></li>
-                  <li><img src="../logo/compose-2.svg"></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
+                  <li><!-- <img src="../logo/compose-2.svg"> --></li>
                 </ul>
               </div>
             </section>
@@ -45,7 +45,8 @@
             <input type='text' placeholder='  Title' id='title'>
             <textarea type='text' placeholder=' Message' id='message'></textarea>
             <div id='options'>
-              <ul>
+              <button id='send'></button>
+              <!-- <ul>
                 <li>
                   <img src="../logo/compose-2.svg">
                 </li>
@@ -58,7 +59,7 @@
                 <li>
                   <img src="../logo/compose-2.svg">
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </aside>
         </article>
@@ -74,15 +75,9 @@
       <label class='all'></label>
     </span>
     <ul>
-      <li>
-        Sender
-      </li>
-      <li>
-        Subject
-      </li>
-      <li>
-        Date
-      </li>
+      <li><p>Sender</p></li>
+      <li><p>Subject</p></li>
+      <li><p>Date</p></li>
     </ul>
   </aside>
   <main>
