last small change

--- a/app/sass/inbox.sass
+++ b/app/sass/inbox.sass
@@ -7,7 +7,7 @@ $mobile: "screen and (max-width: 850px)"
 body
   margin: 0px
   @media #{$mobile}
-    overflow-x: hidden;
+    overflow-x: hidden
 
 // Everything about header
 
